# commcare-ios

./: .env.e2e.local.example  .env.tpl  .gitignore  CLAUDE.md  README.md
.github/workflows/: e2e-ui.yml  hq-integration.yml  ios-build.yml  kotlin-tests.yml
.maestro/: .env.example  config.yaml  run.sh
.maestro/flows/: app-switch-to-bonsaaso.yaml  ci-smoke-test.yaml  connect-id-recovery-from-otp.yaml  connect-id-recovery-to-otp.yaml  connect-id-recovery.yaml  connect-menu-entry.yaml  e2e-hello-world.yaml  form-entry-navigation.yaml  form-navigation.yaml  hq-round-trip.yaml  install-via-url.yaml  login-and-home.yaml  login-to-home.yaml  login-with-app.yaml  login.yaml  marketplace-scout.yaml  module-nav.yaml  multi-app-switch.yaml  nav-drawer-scout.yaml  one-time-registration-from-otp.yaml  one-time-registration-to-otp.yaml  one-time-registration.yaml  post-recovery-state.yaml  register-household-submit.yaml  (+15 more)
app/: build.gradle.kts  settings.gradle.kts
commcare-core/: .gitignore  build.gradle  build.gradle.kts  gradle.properties  settings.gradle.kts
docs/: kotlin-conversion-checklist.md
pipeline/: behavior_catalog.yaml  pyproject.toml
pipeline/src/pipeline/: analyzer.py  behavior_catalog.py  config.py  generate_tasks.py  github_client.py  metrics.py  models.py  oracle.py  orchestrator.py  report.py  run.py
pipeline/tests/: test_analyzer.py  test_behavior_catalog.py  test_config.py  test_generate_tasks.py  test_github_client.py  test_metrics.py  test_models.py  test_oracle.py  test_orchestrator.py  test_report.py  test_run.py
scripts/: testflight-upload.sh
(+1906 files in other folders)
